# DL-energetic-impact-analysis

./: .gitignore  LICENSE  README.md  data-analysis.ipynb  environment.py  pyproject.toml
data/processed/: analysis_data.gzip  dataset_card.md  dl-training-energy-consumption-dataset.gzip
data/raw/: dataset_card.md  model_metrics.gzip
