[tool.poetry]
name = "dl-energetic-impact-analysis"
version = "0.1.0"
description = "Replication package for the master thesis \"An analysis of modeling and training decisions for greener computer vision systems\""
authors = ["Santiago del Rey <santiago.del.rey@upc.edu>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "dl_energetic_impact_analysis" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "<1.25"
pandas = "<1.6"
fastparquet = "<2023.3.0"
pyarrow = "<12.0"
matplotlib = "<3.8"
seaborn = "<0.13"
scikit-learn = "<1.3"
scikit-posthocs = "<0.8"
statsmodels = "<0.14"
jupyter = "<=1"
cliffs-delta = "<=1"
pingouin = "<1.0"

[tool.isort]
profile = "black"

[tool.poetry.group.dev.dependencies]
black = { extras = ["jupyter"], version = "<22.13.0" }
isort = "<5.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
